[package]
name = "langkeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1.0", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
futures = "0.3"
garde = "0.13.0"
r2d2 = "0.8.10"
jsonwebtoken = "8"
bcrypt = "0.15.0"
futures-util = "0.3.28"
actix-service = "2.0.2"
actix-http = "3.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-files = "0.6.2"
# typed-html = "0.2.2"
typed-html = { git = "https://github.com/bodil/typed-html", rev = "4c13ecca" }
